--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
         <img class="pic" src="./assets/img/Geronimo.png" alt="" />
       </div>
       <span>Hey! <a class="text"></a></span>
+      <div class="about">
+        <p>A 13-year-old tech enthusiast.</p>
+      </div>
+      <div class="info right">
+        I'm a budding developer with a passion for coding and technology.
+        Skilled in Java, Python, JavaScript, and HTML. Explore my site to
+        discover my projects and journey in the world of programming.
+      </div>
+      <div class="info left">
+        I'm completing my senior schooling at Delhi Public School, Srinagar,
+        focusing on academics, extracurriculars, and preparing for future
+        opportunities.
+      </div>
+      <div class="info bottom">
+        I'm a part of the Programming team of the Cyber Crew at DPS, Srinagar.
+        We, at the Cyber Crew, undertake various projects and take part in other
+        technological activities.
+      </div>
+      <div class="info top">
+        For the past three years, I've been a freelance developer, working on
+        various projects in languages such as Java, Python and JavaScript,
+        continually enhancing my coding skills.
+      </div>
+
       <div class="contact">
         Contact Me:
         <a class="link" href="https://github.com/daamin909"
