--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="darkreader-lock" />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -10,9 +11,11 @@
     />
     <title>Daamin! 🙂</title>
   </head>
-
   <body>
     <main class="website">
+      <audio autoplay loop>
+        <source src="./assets/sound/pirate_audio.wav" type="audio/mpeg" />
+      </audio>
       <div class="holder">
         <img class="pic" src="./assets/img/Geronimo.png" alt="" />
       </div>
